--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,26 +14,23 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-name: Build CI with different platforms/configs
-
+name: Build
 on:
   push:
     branches:
-      - 'master'
+      - master
   pull_request:
-    branches:
-      - 'master'
-
+    types: [opened, synchronize, reopened]
 jobs:
-  macos-jdk8:
-    name: 'macOS (JDK 8)'
-    runs-on: macos-latest
+  sonarcloud:
+    name: SonarCloud
+    runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-      - name: 'Set up JDK 8'
-        uses: actions/setup-java@v1
+      - uses: actions/checkout@v3
         with:
-          java-version: 8
-      - name: 'Build project'
-        run: |
-          mvn clean install -DskipTests -Pitests
+          fetch-depth: 0  # Shallow clones should be disabled for a better relevancy of analysis
+      - name: SonarCloud Scan
+        uses: SonarSource/sonarcloud-github-action@master
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Needed to get PR information, if any
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
